# airflow

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  build_release.sh  docker-compose.yml  pyproject.toml  run_airflow.sh  soar-1.13.0-py3-none-any.whl  usuarios_airflow.json
.github/workflows/: codacy.yml  codeql.yml  defender-for-devops.yml  devskim.yml  ossar.yml
dags/soar/setup/: setup_client.py  setup_crawler.py  setup_soar_airflow.py  setup_yara.py
dags/soar/setup/cti/: cti_monitoring_crawler_with_credential_onion.py  cti_monitoring_crawler_with_credential_web.py  cti_monitoring_crawler_without_credential_onion.py  cti_monitoring_crawler_without_credential_web.py
setup/: update_ransomware_list_mongodb.py
